# TaintAnalysis

./: CMakeLists.txt  Makefile.common.in  README  configure
autoconf/: aclocal.m4  configure.ac
autoconf/autom4te.cache/: output.0  requests  traces.0  traces.1
include/: TaintAnalysis.h  TaintInliner.h
lib/: CMakeLists.txt  Makefile
lib/alias/: CFGTree.cpp  CMakeLists.txt  Makefile  TaintAnalysis.cpp  TaintAnnotation.cpp  TaintInliner.cpp  tmp
